fix: wrong padding for root div

--- a/client/stylesheets/main.sass
+++ b/client/stylesheets/main.sass
@@ -32,7 +32,7 @@ body
 	width: 100%
 	height: 100%
 	min-height: 100vh
-	padding: 1em 0
+	padding-bottom: 1em
 
 div
 	width: 100%
